[package]
name = "locspan"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
version = "0.2.2"
edition = "2021"
description = "Code mapping utility types and traits."
categories = ["parsing"]
keywords = ["source", "code", "map", "span"]
repository = "https://github.com/timothee-haudebourg/locate-syntax"
documentation = "https://docs.rs/locate-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
reporting = ["codespan-reporting"]

[dependencies]
codespan-reporting = { version = "0.11", optional = true }